[gd_scene load_steps=5 format=3 uid="uid://cjpuelxiseiff"]

[ext_resource type="Script" path="res://objs/cast/scripts/ContinuousRectArea.gd" id="1_ugy74"]
[ext_resource type="Material" uid="uid://7s52l7ud3a8x" path="res://graphics/materials/cast_generico.tres" id="2_d87n5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jgbkq"]
size = Vector3(1, 0.5, 5)

[sub_resource type="BoxMesh" id="BoxMesh_l3njh"]
material = ExtResource("2_d87n5")
size = Vector3(1, 0.5, 5)

[node name="ContinuousRectArea" type="Node3D"]
script = ExtResource("1_ugy74")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_jgbkq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
mesh = SubResource("BoxMesh_l3njh")

[node name="Timer" type="Timer" parent="."]

[node name="DelayTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
